<resources>
    <string name="app_name">ATB</string>
    <string name="str_back_one_more_end">Pressing once more will terminate</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="or_login">or login using</string>
    <string name="facebook">facebook</string>
    <string name="next_user">New User? Register here</string>
    <string name="signup2">How Would You Like To Sign Up?</string>
    <string name="signup1">Create A New Account</string>
    <string name="use_email">Use your Email</string>
    <string name="have_accout">I Already Have An Account</string>
    <string name="singin_instead">Sign In Instead></string>
    <string name="signup3">Use Your Email For Sign Up</string>
    <string name="signup4">We will use the following email every time you try to sign up in our app</string>
    <string name="create_password">Next: Create a Password ></string>
    <string name="confirm_email">Confirm Email</string>
    <string name="back_toemail">Back To Email</string>
    <string name="set_password">Set a Password</string>
    <string name="set_password1">We will start this credentials for a quick access</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="complete_user">Complete and set your profile ></string>
    <string name="account_created">Your account has been created</string>
    <string name="complete_profile">Now please complete your profile</string>
    <string name="set_picture">Set a Profile Picture</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Date Of Birth</string>
    <string name="invite_code">Invitation Code</string>
    <string name="lets_began">Let"'"s Begin</string>
    <string name="complete_action_using">Complete Action Using</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="gallery">Gallery</string>
    <string name="select_feed">Please select the groups your interested in so that we can personalise your <font color='FF000000'><b>ATB Feed</b></font></string>
    <string name="selectall">Select All</string>
    <string name="createfeed">Create your Feed</string>
    <string name="my_atb">My ATB</string>
    <string name="atb_approve"><b>ATB</b> Approved</string>
    <string name="what_want_post">What do you want to post?</string>
    <string name="advice">Advice</string>
    <string name="advice1">Recommendations or Help</string>
    <string name="sales">Sale Posts</string>
    <string name="select_item">Select Item</string>
    <string name="service_offer">Service Offered</string>
    <string name="poll_votting">Poll/Voting</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_text">Looking For Somethings?</string>
    <string name="finish_app">Do you want to close app?</string>
    <string name="back">Back</string>
    <string name="newpost">New Post</string>
    <string name="media_type">Media Type</string>
    <string name="writtle_title">Write a title for your advice.</string>
    <string name="description">Add a Description</string>
    <string name="post_in">Post In</string>
    <string name="complete_post">Complete missing fields to post</string>
    <string name="what_wouldlike">What would you like to do?</string>
    <string name="remove_media">Remove This media from the post</string>
    <string name="add_media">Add Media</string>
    <string name="select_profile">Select a Profile</string>
    <string name="exist_product">One of My Existing Products</string>
    <string name="want_post">I want to post</string>
    <string name="newproduct">A New Product</string>
    <string name="new_service">A New Service</string>
    <string name="exist_service">One of My Services</string>
    <string name="create_oneproduct">Create a\nNew Product Post</string>
    <string name="create_multiproduct">Create Multiple Products Post</string>
    <string name="singlepost">Single Product</string>
    <string name="multipost">Multiple Products</string>
    <string name="brand">Brand</string>
    <string name="brand_detail">What brand is the product?</string>
    <string name="price">Price</string>
    <string name="condition">Condition</string>
    <string name="item">Item</string>
    <string name="item_description">What item is the product?</string>
    <string name="variations">Does this product have Variations?</string>
    <string name="variations_description">Give the users an option for selecting from the different options your product can have</string>
    <string name="variation">Variations</string>
    <string name="add_variation">Add a new Variation</string>
    <string name="stock">Stock</string>
    <string name="manage_stock">Manage Stock</string>
    <string name="stock_description">A complete list of variations an options has been listed here based on the variation selected</string>
    <string name="payment_option">Payment Options</string>
    <string name="payment_description">Please select the options you"'"d like to be paid with</string>
    <string name="cash">Cash on collection</string>
    <string name="paypal">Card</string>
    <string name="delivery_option">Delivery Options</string>
    <string name="delivery_option_description">Select with options for delivery will you allow this product have </string>
    <string name="free_postage">Free postage</string>
    <string name="buyer_collect">Buyer Collects</string>
    <string name="will_deliver">Will Deliver</string>
    <string name="tag">Add Tags</string>
    <string name="tag_description">Type a tag in</string>
    <string name="complete_missing">Complete missing fields to post</string>
    <string name="publish_allitem">Publish all items</string>
    <string name="all_product">All created your products</string>
    <string name="publish_all">Publish all as post</string>
    <string name="post_selected_product">Post selected Products</string>
    <string name="post_a_service">Post a Service</string>
    <string name="all_service">All created your services</string>
    <string name="add_title">Add a Title</string>
    <string name="depost_require">Deposit Required NO/YES</string>
    <string name="cancel_day">Cancellation Within Day(s)</string>
    <string name="area_covered">Area Covered</string>
    <string name="require_insurance">Does This Service Require Insurance?</string>
    <string name="require_quality">Does This Service Require Qualifications?</string>
    <string name="no_insurance">No Insurances Added</string>
    <string name="no_quality">No Qualifications Added</string>
    <string name="make_question">Make a question...</string>
    <string name="add_picture">Add Picture</string>
    <string name="options">Options</string>
    <string name="poll_duration">Poll duration</string>
    <string name="follower">follower</string>
    <string name="following">following</string>
    <string name="posts">posts</string>
    <string name="title_activity_profile_naviagation">ProfileNaviagationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="notification">Notifications</string>
    <string name="show_notifcataion">Show all notifications</string>
    <string name="update_business">Update My Business</string>
    <string name="bookings">Bookings</string>
    <string name="item_sold">Items Sold</string>
    <string name="creat_amend">Create / Amend Bio</string>
    <string name="set_post_range">Location &amp; Radius</string>
    <string name="post_range">Post Range</string>
    <string name="user_setting">User Settings</string>
    <string name="transaction_histsory">Transaction History</string>
    <string name="transaction">Transactions</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="saved_post">Saved Posts</string>
    <string name="draft_post">Saved Drafts</string>
    <string name="logout">Log out</string>
    <string name="business_description">Upgrade to a Business Account</string>
    <string name="business_description1">Upload Business Logo</string>
    <string name="business_description2">Will recommend you to use your logo you can use any emails related to your business, this will be visible next to your post</string>
    <string name="business_name">Set a business name</string>
    <string name="add_website">Add your website</string>
    <string name="tell_us_business">Tell us about your business</string>
    <string name="set_operation_hour">Set Operating hours</string>
    <string name="set_operation_hour_description">This will populate your booking system based upon the availability you have provided</string>
    <string name="not_set_yet">Not Set Yet</string>
    <string name="add_insurance_quality">Add Insurances and Qualifications</string>
    <string name="add_insurance_quality_description">Add your qualifications here in case some of your services requires insurances or certificates. You can do this later.
        \nThe documents provided can be seen by potential clients when viewing a service. The image will be protected by an “ATB Approved“ watermark.
    </string>
    <string name="add_certification">Add Certification</string>
    <string name="add_insurance">Add Insurance</string>
    <string name="link_social_media">Link your social media</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="add_tag_business">Add tags for your business</string>
    <string name="add_tag_business_description">Add up to 5 tags that best represent your business, this will make it easier for customers to find you on the ATB Directory.</string>
    <string name="type_a_tag">Type a Tag</string>
    <string name="save_business_detail">Save Business Details </string>
    <string name="input_username">Type your username</string>
    <string name="input_title">Please input the title</string>
    <string name="input_description">Please input the description</string>
    <string name="input_photos">Please add images for your post.</string>
    <string name="input_videos">Please add a video for your post</string>
    <string name="what_question">What"'"s your question?</string>
    <string name="contact_description">In case you have more details please describe below</string>
    <string name="send_enquiry">Send Enquiry</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="cancel_booking1">Are you sure you want to\ncancel this booking?</string>
    <string name="cancel_booking2">We will let the user know that this is going to finished the booking and in case he wants to book again he have to select a different option</string>
    <string name="modification_booking">[Send a modification request to the\nbooking instead]</string>
    <string name="terms_condition">I agree to the <font color="#FF0000">Privacy Policy</font> and the <font color="#FF0000">Terms and Use</font></string>
</resources>