<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/lyt_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/signup_popup_color"
    tools:context=".activities.register.Signup2Activity"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <ImageView
            android:id="@+id/imv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_back2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_toemail"
            android:textColor="@color/head_color"
            android:theme="@style/boldtextTheme"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_lock"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_password"
            android:textColor="@color/signup_textcolor"
            android:theme="@style/boldtextTheme"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_password1"
        android:textColor="@color/signup_textcolor"
        android:theme="@style/textTheme"
        android:layout_marginTop="5dp"
        android:textSize="16sp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <EditText android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/edit_inputtext" />
        <ImageView
            android:id="@+id/imv_selector1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_password_invisible"
            android:layout_gravity="right|center"
            android:layout_marginRight="10dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <EditText android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            style="@style/edit_inputtext" />
        <ImageView
            android:id="@+id/imv_selector2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_password_invisible"
            android:layout_gravity="right|center"
            android:layout_marginRight="10dp" />
    </FrameLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyt_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <RadioButton
            android:id="@+id/radio_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txv_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_condition"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/txv_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/complete_user"
        android:gravity="center"
        android:textColor="@color/line_white"
        android:layout_marginTop="10dp"
        android:enabled="false"
        style="@style/btn_buttonStyle"
        android:background="@drawable/button_rectangle_round"
        android:layout_marginBottom="80dp"/>

</LinearLayout>