<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit_rectangle_round"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_redreport"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_booking1"
            style="@style/boldtextTheme"
            android:textColor="@color/txt_color"
            android:gravity="center"
            android:textSize="23sp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_booking2"
            android:gravity="center"
            style="@style/textTheme"
            android:textColor="@color/txt_color"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/txv_modify_booking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modification_booking"
            android:gravity="center"
            android:textColor="@color/head_color"
            style="@style/btn_buttonStyle"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:fontFamily="@font/segoe_ui_light"
            android:layout_marginTop="20dp"
            android:background="@drawable/under_line"/>
        <TextView
            android:id="@+id/txv_calcel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cancel_booking"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            style="@style/boldtextTheme"
            android:background="@drawable/button_rectangle_round"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
</LinearLayout>