<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/lyt_container"
    android:background="@color/signup_popup_color">
    <ScrollView
        android:id="@+id/lyt_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:id="@+id/lyt_animation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/account_logo"
                    android:tint="@color/green"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_created"
                    android:textColor="@color/green"
                    android:layout_marginTop="5dp"
                    style="@style/boldtextTheme"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete_profile"
                    android:textColor="@color/txt_color"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    style="@style/textTheme"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_user_info_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    app:cardCornerRadius="50dp"
                    android:layout_gravity="center"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="false">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/imv_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:actualImageScaleType="centerCrop"
                        app:placeholderImage="@drawable/profile_pic"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_picture"
                    android:textColor="@color/txt_color"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:layout_marginLeft="20dp"
                    style="@style/textTheme"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <EditText android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username"
                    style="@style/edit_inputtext" />
            </LinearLayout>
            <EditText android:id="@+id/edt_firstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/first_name"
                style="@style/edit_inputtext"
                android:layout_marginTop="10dp"/>
            <EditText android:id="@+id/edt_lastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/last_name"
                style="@style/edit_inputtext"
                android:layout_marginTop="10dp"/>
            <EditText android:id="@+id/edt_bio"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:hint="@string/description"
                android:paddingTop="15dp"
                android:layout_marginTop="10dp"
                style="@style/edit_inputtext"
                android:gravity="start"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView android:id="@+id/txv_location"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:hint="@string/location"
                    style="@style/edit_inputtext" />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_location"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="10dp" />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView android:id="@+id/txv_male"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:text="@string/male"
                        style="@style/edit_inputtext" />
                    <ImageView
                        android:id="@+id/imv_selector1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_checked"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="10dp" />
                </FrameLayout>
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp">
                    <TextView android:id="@+id/txv_female"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:text="@string/female"
                        style="@style/edit_inputtext" />
                    <ImageView
                        android:id="@+id/imv_selector2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_checked"
                        android:visibility="gone"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="10dp" />
                </FrameLayout>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView android:id="@+id/edt_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:hint="@string/birthday"
                    android:gravity="center_vertical"
                    style="@style/edit_inputtext" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_birthday"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="10dp" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <EditText android:id="@+id/edt_invitecode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:inputType="text"
                    android:hint="@string/invite_code"
                    style="@style/edit_inputtext" />
                <FrameLayout
                    android:id="@+id/lyt_paste"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="right|center"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:background="@color/head_color">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_past"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp" />
                </FrameLayout>
            </FrameLayout>
            <TextView
                android:id="@+id/txv_next"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/lets_began"
                android:enabled="false"
                android:gravity="center"
                android:textColor="@color/line_white"
                android:layout_marginTop="20dp"
                style="@style/btn_buttonStyle"
                android:background="@drawable/button_rectangle_round"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>